<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EnquiryForm">


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/lgin_enquiry"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="15dp"/>

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lgin_name"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lgin_email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/editTextMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lgin_mobile"
        android:inputType="text|phone"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/lgin_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lgin_subject"
        android:inputType="text"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/lgin_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lgin_query"
        android:inputType="text"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lgin_submit"
        android:textAllCaps="false"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"/>

</LinearLayout>

