<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_cmslogin"
        android:orderInCategory="100"
        android:title="@string/action_cmslogin" />
    <item
        android:id="@+id/action_erplogin"
        android:orderInCategory="100"
        android:title="@string/action_erplogin"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rateus"
        android:orderInCategory="100"
        android:title="@string/action_rateus"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="Exit"
        app:showAsAction="never" />
</menu>
