<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingLeft="32dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:paddingRight="32dp"
        android:textSize="25sp"
        android:text="@string/intro_slide25"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingLeft="32dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:paddingRight="32dp"
        android:textSize="25sp"
        android:text="@string/intro_slide21"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:textColor="@color/black"
        android:text="@string/intro_slide22"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingLeft="32dp"
        android:textColor="@color/black"
        android:paddingRight="32dp"
        android:textSize="25sp"
        android:text="@string/intro_slide23"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/intro_slide24"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:background="@color/light_grey"/>
</LinearLayout>